# options-pricing-engine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
bench/: benchmark.cpp  benchmark_gb.cpp  gbench.cpp
bindings/: bindings.cpp
include/ope/: binomial.hpp  black_scholes.hpp  implied_vol.hpp  jump_diffusion.hpp  monte_carlo.hpp  types.hpp
python/: convergence.py  validate.py  vol_surface.py
src/: binomial.cpp  black_scholes.cpp  implied_vol.cpp  jump_diffusion.cpp  monte_carlo.cpp
tests/: test_black_scholes.cpp  test_convergence.cpp  test_implied_vol.cpp  test_jump_diffusion.cpp
